Fixed off center front page body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -104,10 +104,10 @@ div.navbar-brand:hover {
   float: left;
 }
 
-.sidebar {
-  padding-right: 5px;
-  padding-left: 5px;
-}
+// .sidebar {
+//   padding-right: 5px;
+//   padding-left: 5px;
+// }
 
 .dropdown {
   text-align: center;
@@ -123,7 +123,7 @@ div.navbar-brand:hover {
 
 .photo-gallery {
   display: inline-block;
-  width: 80%;
+  width: 82%;
 }
 
 @media(max-width:992px){
